# pico

./: Cargo.toml  LICENSE.txt  README.md  build.rs  icon.rc
.github/workflows/: release.yml  test.yml
src/: config.rs  lang.rs  main.rs
